# robotica-servicios-cognitiva

./: .gitignore  README.md
robotica-cognitiva-2526/Docker/: docker-compose.yaml
robotica-cognitiva-2526/Docker/scripts/: setup_bashrc.sh
robotica-cognitiva-2526/P1/: EJERCICIO1_EXPLICACION.md  EJERCICIO2_EXPLICACION.md  EJERCICIO3_EXPLICACION.md  EJERCICIO4_EXPLICACION.md  EJERCICIO5_EXPLICACION.md
robotica-cognitiva-2526/P1/install/: setup.bash  setup.sh  setup.zsh
robotica-cognitiva-2526/P2/: EJERCICIO10_EXPLICACION.md  EJERCICIO1_EXPLICACION.md  EJERCICIO2_3_EXPLICACION.md  EJERCICIO4_EXPLICACION.md  EJERCICIO5_EXPLICACION.md  EJERCICIO9_EXPLICACION.md  EJERCICIOS6_7_8_EXPLICACION.md  selector.dot
robotica-cognitiva-2526/P2/src/bt_robot/: CMakeLists.txt  package.xml
robotica-cognitiva-2526/P2/src/bt_robot/src/: bt_robot_battery_node.cpp  bt_robot_node.cpp
robotica-cognitiva-2526/P2/src/bt_robot/trees/: obstacle_tree.xml  service_robot_tree.xml
robotica-servicios-2025-iherrl00-reorganizado/: README.md
robotica-servicios-2025-iherrl00-reorganizado/P1/: practica_1.txt
robotica-servicios-2025-iherrl00-reorganizado/P2/: practica_2.txt
robotica-servicios-2025-iherrl00-reorganizado/P3/: practica_3.txt
robotica-servicios-2025-iherrl00-reorganizado/P4/: practica_4.txt
robotica-servicios-2025-iherrl00-reorganizado/P5/: practica_5.txt
robotica-servicios-2025-iherrl00-reorganizado/P6/: practica_6.txt
robotica-servicios-2025-iherrl00-reorganizado/P7/: TF.txt
robotica-servicios-2025-iherrl00-reorganizado/ROS2andGazebo/: .gitpod.yml
(+228 files in other folders)
